--- a/login.html
+++ b/login.html
@@ -155,7 +155,7 @@
         localStorage.setItem("userRole", "nurse");
         showMessage("👩 Welcome, Nurse! Redirecting to your dashboard...", "success");
         setTimeout(() => {
-          window.location.href = "nurse-dashboard.html";
+          window.location.href = "StaffPage.html";
         }, 3000);
       } 
       else {
