--- a/html_files/index.html
+++ b/html_files/index.html
@@ -6,17 +6,6 @@
   <title>SilverCare Portal — Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../css_files/index_style.css" rel="stylesheet">
-  <style>
-    /* Additional styles for the new login section */
-    .login-section {
-      background-color: #f8f9fa;
-      border-radius: 10px;
-      padding: 25px;
-      margin: 30px 0;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      border-left: 5px solid #0d6efd;
-    }
-  </style>
 </head>
 
 <body>
@@ -30,7 +19,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="HomePage.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="hospitals.html">Local Hospitals</a></li>
@@ -174,7 +163,7 @@
           <a href="community.html" class="btn btn-primary mt-2">View All Community Events</a>
         </section>
       </div>
-   
+    </div>
   </main>
 
   <!-- Footer -->
@@ -188,19 +177,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function readAloud(text) {
-      if ('speechSynthesis' in window) {
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.rate = 0.8; // Slower for seniors
-        utterance.pitch = 1.0;
-        utterance.volume = 1.0;
-        window.speechSynthesis.speak(utterance);
-      } else {
-        alert('Read aloud is not supported in your browser. Please call our helpline for assistance.');
-      }
-    }
-
-  </script>
+  <script src="../javascript_files/ReadAloud.js"></script>
 </body>
 </html>
