--- a/html_files/index.html
+++ b/html_files/index.html
@@ -19,122 +19,63 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="hospitals.html">Local Hospitals</a></li>
           <li class="nav-item"><a class="nav-link" href="community.html">Community Hub</a></li>
           <li class="nav-item"><a class="nav-link" href="exercise.html">Exercise Videos</a></li>
         </ul>
-
-        <!-- Login Button -->
-          <aside class="login-fixed" aria-label="Login quick access">
-          <h4 class="mb-2">🔐Access Your SilverCare Account</h4>
-          <p class="mb-3 text-muted fs-10">Log in to manage your health information, appointments, and connect with your care team.</p>
-          <a href="login.html" class="btn btn-primary w-100 btn-large py-3 fs-4" style="font-size: 2rem; border-radius: 1.2rem;"> Log In</a>
-          <hr class="my-4">
-          <div class="section-card bg-light border-warning mt-3 p-3 rounded-4">
-            <h6 class="fs-5 fw-bold">Emergency Contacts</h6>
-              <div class="mt-2 fs-5">
-                <p><strong>Emergency:</strong> 911</p>
-                <p><strong>SilverCare Helpline:</strong> <a href="tel:+16041234567">(604) 123-4567</a></p>
-                <p><strong>Poison Control:</strong> 1-800-567-8910</p>
-                <button class="btn btn-warning w-100 mt-2" onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
-                🔊 Read Numbers Aloud
-                </button>
-              </div>
-            </div>
-          </aside>
-
-      </div>   
+      </div>
     </div>
   </nav>
- 
-  <!-- Main Content -->
-   <!-- Welcome Banner -->
-  <section class="silvercare-hero rounded-4 mb-4" role="region" aria-label="Welcome to SilverCare Initiative" style="--hero:url('../Images/seniors_pic2.jpg')">
-    <div class="silvercare-hero__bg" aria-hidden="true"></div>
-    <div class="silvercare-hero__content text-center container">
-      <h1 class="silvercare-hero__title">Welcome to SilverCare Initiative</h1>
-      <p class="silvercare-hero__subtitle">
-        Enhancing quality of life for seniors through comprehensive care and community building
-      </p>
-      <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center">
-        <a href="hospitals.html" class="'btn btn-light btn-lg silvercare-cta">Find Care & Resources</a>
-        <button class="btn btn-outline-light btn-lg read-btn" onclick="readAloud('Welcome to SilverCare Initiative. Enhancing quality of life for seniors through comprehensive care and community building')">
-          🔊 Read Aloud
+
+  <!-- Login Fixed Panel -->
+  <aside class="login-fixed" aria-label="Login quick access">
+    <p class="mb-3 text-muted">Log in to manage your health information, appointments, and connect with your care team.</p>
+    <a href="login.html" class="btn btn-primary w-100 btn-large py-3 fs-4" style="border-radius: 1.2rem;">Log In</a>
+    <hr class="my-4">
+    <div class="section-card bg-light border-warning mt-3 p-3 rounded-4">
+      <h6 class="fs-5 fw-bold">Emergency Contacts</h6>
+      <div class="mt-2">
+        <p><strong>Emergency:</strong> 911</p>
+        <p><strong>Nurse:</strong> <a href="tel:+16041234567">(604) 123-4567</a></p>
+        <p><strong>Poison Control:</strong> 1-800-567-8910</p>
+        <button class="btn btn-warning w-100 mt-2" onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
+          🔊 Read Numbers Aloud
         </button>
       </div>
     </div>
-  </section>
+  </aside>
 
-  <!-- Info about SilverCare Initiative -->
-  <section class="section-card about-silvercare mt-5" id="about">
-  <div class="row align-items-center g-4">
-    <!-- <div class="col-md-5 text-center">
-      <img src="../Images/SilverCare_Logo.jpg" alt="SilverCare Initiative" class="about-img img-fluid rounded-4 shadow-sm mb-3" style="max-width: 260px;">
-    </div> -->
-    <div class="col-md-7">
-      <h2 class="about-title mb-3">
-        <span class="about-icon">🩵</span> <strong>About SilverCare Initiative</strong> 
-      </h2>
-      <p>
-        <strong>SilverCare Initiative</strong> is a <span class="text-primary">community-driven, non-profit organization based in North Vancouver</span> dedicated to improving the health, comfort, and independence of seniors. We provide <strong>residential care, nursing services, and daily living assistance</strong> for adults aged 60 and above, ensuring that every resident feels safe, respected, and connected.
-      </p>
-      <p>
-        Our facilities are designed to be:
-      </p>
-      <ul class="about-list mb-3">
-        <li>Accessible, friendly, and supportive facilities</li>
-        <li>Professional healthcare & vibrant social environment</li>
-        <li>Group activities, wellness programs, and cultural celebrations</li>
-        <li>Personalized care plans that cater to the seniors' unique needs</li>
-      </ul>
+  <!-- Main Content -->
+  <main class="container my-4">
+    <div class="row">
+      <!-- Content Column - Widened to use more space -->
+      <div class="col-lg-10 col-xl-9">
+        <!-- Welcome Banner with Background Image -->
+        <section class="welcome-banner-with-image text-center">
+          <div class="welcome-overlay">
+            <h1>Welcome to SilverCare Initiative</h1>
+            <p class="lead">Enhancing quality of life for seniors through comprehensive care and community building</p>
+            <button class="btn btn-outline-light btn-lg mt-3 read-btn" onclick="readAloud('Welcome to SilverCare Initiative. Enhancing quality of life for seniors through comprehensive care and community building')">
+              🔊 Read Aloud
+            </button>
+          </div>
+        </section>
 
-      <p>
-        At SilverCare, our mission is to <strong>enhance the quality of life for seniors through compassionate care,
-        holistic health support, and meaningful community engagement.</strong> We believe that aging should be a time
-        of dignity, connection, and fulfillment, and our dedicated staff and volunteers work each day to make that
-        vision a reality.
-       </p>
-    </div>
-  </div>
-</section>
-
-        <!-- Features Overview with Images-->
-        <!-- <section class="section-card">
-          <h2>🌟 Why Choose SilverCare Portal?</h2>
-          <div class="row mt-4">
-            <div class="col-md-6 mb-4">
-              <div class="image-placeholder health-image">
-                <span>🩺 Health Tracking</span>
-              </div>
-              <h4 class="mt-2">Easy Health Monitoring</h4>
-              <p>Track blood pressure, medication, and appointments with simple, large displays.</p>
+        <!-- NEW: Login Section -->
+        <section class="login-section">
+          <div class="row align-items-center">
+            <div class="col-md-8">
+              <h3>🔐 Access Your SilverCare Account</h3>
+              <p class="mb-0">Log in to manage your health information, appointments, and connect with your care team.</p>
             </div>
-            <div class="col-md-6 mb-4">
-              <div class="image-placeholder community-image">
-                <span>👥 Community Events</span>
-              </div>
-              <h4 class="mt-2">Stay Connected</h4>
-              <p>Never miss bingo night, book club, or social activities with easy event tracking.</p>
-            </div>
-            <div class="col-md-6 mb-4">
-              <div class="image-placeholder exercise-image">
-                <span>💪 Senior Exercises</span>
-              </div>
-              <h4 class="mt-2">Stay Active</h4>
-              <p>Gentle exercise videos designed specifically for senior fitness and mobility.</p>
-            </div>
-            <div class="col-md-6 mb-4">
-              <div class="image-placeholder" style="height: 200px; background: linear-gradient(45deg, #e3f2fd, #90caf9);">
-                <span>🏥 Local Resources</span>
-              </div>
-              <h4 class="mt-2">Quick Access to Help</h4>
-              <p>One-click contact for hospitals, clinics, and emergency services.</p>
+            <div class="col-md-4 text-center text-md-end">
+              <a href="login.html" class="btn btn-primary btn-lg px-4 py-2">Log In Now</a>
             </div>
           </div>
-        </section> -->
+        </section>
 
         <!-- Local Hospitals Directory -->
         <section class="section-card">
@@ -197,12 +138,12 @@
 
         <!-- Community Events -->
         <section class="section-card">
-          <h2>📅 Community Events</h2>
+          <h2>📅Upcoming Community Events</h2>
           <div class="event-card">
             <div class="d-flex align-items-start">
               <div class="feature-icon">🎯</div>
               <div class="ms-3">
-                <h4>Weekly Bingo Night</h4>
+                <h4>Digital Literacy Workshop</h4>
                 <p>📅 <strong>Every Tuesday • 2:00 PM</strong></p>
                 <p>📍 Community Room • All residents welcome</p>
                 <p>Prizes and fun for everyone! No experience needed.</p>
@@ -214,16 +155,16 @@
               <div class="feature-icon">📚</div>
               <div class="ms-3">
                 <h4>Book Club Meeting</h4>
-                <p>📅 <strong>Friday, March 15 • 10:00 AM</strong></p>
+                <p>📅 <strong>Friday, October 15 • 10:00 AM</strong></p>
                 <p>📍 Library • Coffee and snacks provided</p>
-                <p>This month: "The Thursday Murder Club" - all readers welcome!</p>
+                <p>This month: "The Kite Runner" - all readers welcome!</p>
               </div>
             </div>
           </div>
           <a href="community.html" class="btn btn-primary mt-2">View All Community Events</a>
         </section>
       </div>
-   
+    </div>
   </main>
 
   <!-- Footer -->
