--- a/html_files/login.html
+++ b/html_files/login.html
@@ -74,18 +74,18 @@
           <a href="register.html" class="text-decoration-none">Create account</a>
         </div>
 
-        <div class="divider">
+        <!-- <div class="divider">
           <span class="divider-text">or continue with</span>
-        </div>
+        </div> -->
 
-        <div class="alternative-login">
+        <!-- <div class="alternative-login">
           <button type="button" class="btn btn-outline-secondary w-100 mb-2" onclick="voiceLogin()">
             🎤 Voice Login
           </button>
           <button type="button" class="btn btn-outline-primary w-100" onclick="simpleLogin()">
             👤 Simple Login
           </button>
-        </div>
+        </div> -->
       </form>
       
 
