--- a/html_files/login.html
+++ b/html_files/login.html
@@ -1,3 +1,6 @@
+
+<!-- Subnoors original login -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +8,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SilverCare Portal — Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../css_files/login_style.css" rel="stylesheet">
+  <link href="../css_files/index_style.css" rel="stylesheet">
 </head>
 
 <body class="login-body">
@@ -13,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="../Images/SilverCare_Logo.jpg" alt="SilverCare Logo" style="height: 75px; margin-right: 10px;">
+        <img src="images/SilverCare_Logo.jpg" alt="SilverCare Logo" style="height: 75px; margin-right: 10px;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -26,6 +29,9 @@
           <li class="nav-item"><a class="nav-link" href="community.html">Community Hub</a></li>
           <li class="nav-item"><a class="nav-link" href="exercise.html">Exercise Videos</a></li>
         </ul>
+        <div class="navbar-nav">
+          <a class="nav-link active" href="login.html">Login</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -67,27 +73,44 @@
           <label class="form-check-label" for="rememberMe">Remember me</label>
         </div>
 
-        <button type="submit" class="btn btn-login">Sign In</button>
+        <button type="submit" class="btn btn-login w-100">Sign In</button>
 
-        <div class="login-options">
+        <!-- Area for success/error message -->
+        <div id="messageArea" class="mt-3"></div>
+
+        <div class="login-options mt-3">
           <a href="forgot-password.html" class="text-decoration-none">Forgot password?</a>
           <a href="register.html" class="text-decoration-none">Create account</a>
         </div>
 
-        <!-- <div class="divider">
+        <div class="divider mt-4">
           <span class="divider-text">or continue with</span>
-        </div> -->
+        </div>
 
-        <!-- <div class="alternative-login">
+        <div class="alternative-login mt-2">
           <button type="button" class="btn btn-outline-secondary w-100 mb-2" onclick="voiceLogin()">
             🎤 Voice Login
           </button>
           <button type="button" class="btn btn-outline-primary w-100" onclick="simpleLogin()">
             👤 Simple Login
           </button>
-        </div> -->
+        </div>
       </form>
-      
+
+      <!-- Emergency Section -->
+      <div class="emergency-section mt-4">
+        <div class="card border-warning">
+          <div class="card-body">
+            <h6 class="card-title">🚨 Emergency Access</h6>
+            <p class="card-text small">Need immediate help?</p>
+            <button class="btn btn-warning w-100" onclick="emergencyAccess()">
+              Emergency Login
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
@@ -99,6 +122,67 @@
     </div>
   </footer>
 
+  <!-- Bootstrap and JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // Dummy users
+    const dummySenior = {
+      email: "seniortest@silvercare.org",
+      password: "12345"
+    };
+
+    const dummyNurse = { 
+      email: "nursetest@silvercare.org",
+      password: "admin123"
+    };
+
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const messageArea = document.getElementById("messageArea");
+
+      // Clear any previous message
+      messageArea.innerHTML = "";
+
+      if (email === dummySenior.email && password === dummySenior.password) {
+        localStorage.setItem("userRole", "resident");
+        showMessage("👵 Welcome, SilverCare Resident! Redirecting to your dashboard...", "success");
+        setTimeout(() => {
+          window.location.href = "SeniorPage.html";
+        }, 1500);
+      } 
+      else if (email === dummyNurse.email && password === dummyNurse.password) {
+        localStorage.setItem("userRole", "nurse");
+        showMessage("👩 Welcome, Nurse! Redirecting to your dashboard...", "success");
+        setTimeout(() => {
+          window.location.href = "StaffPage.html";
+        }, 1500);
+      } 
+      else {
+        showMessage("❌ Invalid email or password. Please try again.", "danger");
+      }
+    });
+
+    // Function to show styled messages
+    function showMessage(text, type) {
+      const messageArea = document.getElementById("messageArea");
+      const alertDiv = document.createElement("div");
+      alertDiv.className = `alert alert-${type}`;
+      alertDiv.textContent = text;
+      messageArea.appendChild(alertDiv);
+    }
+
+    // Dummy placeholder functions
+    function voiceLogin() {
+      alert("🎤 Voice Login feature will be available soon!");
+    }
+
+  </script>
+</body>
+</html>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JavaScript.js"></script>
 </body>
