--- a/html_files/index.html
+++ b/html_files/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <h5 class="mt-2">Gentle Chair Yoga</h5>
                 <p>15 minutes • Beginner Friendly • Seated Exercises</p>
-                <button class="btn btn-primary">Watch Now</button>
+                <a href="https://youtu.be/G8BsLlPE1m4?si=_ySvqSgYcFuFSdyn" target="_blank" class="btn btn-primary">Watch Now</a>
               </div>
             </div>
             <div class="col-md-6">
@@ -129,7 +129,7 @@
                 </div>
                 <h5 class="mt-2">Balance & Strength</h5>
                 <p>10 minutes • All Levels • Improve Stability</p>
-                <button class="btn btn-primary">Watch Now</button>
+                <a href="https://youtu.be/t2SCv3fhxYs?si=Jr0vHGlloG0tTpsl" target="_blank" class="btn btn-primary">Watch Now</a>
               </div>
             </div>
           </div>
