--- a/html_files/hospitals.html
+++ b/html_files/hospitals.html
@@ -362,35 +362,49 @@
         </section>
 
         <!-- Emergency Information -->
-        <section class="section-card bg-warning bg-opacity-10">
-          <h2 class="text-danger">🚨 Emergency Information</h2>
-          <div class="row">
-            <div class="col-md-6">
-              <h4>When to Go to Emergency</h4>
-              <ul class="fs-5">
-                <li>Chest pain or difficulty breathing</li>
-                <li>Severe bleeding or head injury</li>
-                <li>Sudden weakness or numbness</li>
-                <li>Severe burns or broken bones</li>
-                <li>Overdose or poisoning</li>
-              </ul>
+<section class="emergency-section">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="emergency-title">🚨 Emergency Information</h2>
             </div>
-            <div class="col-md-6">
-              <h4>Urgent Care Centers</h4>
-              <p class="fs-5">For non-life-threatening conditions like:</p>
-              <ul class="fs-5">
-                <li>Sprains and strains</li>
-                <li>Minor cuts requiring stitches</li>
-                <li>Ear infections</li>
-                <li>Urinary tract infections</li>
-                <li>Minor fractures</li>
-              </ul>
+        </div>
+        <div class="row emergency-content">
+            <div class="col-md-6 emergency-column">
+                <div class="emergency-card">
+                    <h3>When to Go to Emergency</h3>
+                    <ul>
+                        <li>Chest pain or difficulty breathing</li>
+                        <li>Severe bleeding or head injury</li>
+                        <li>Sudden weakness or numbness</li>
+                        <li>Severe burns or broken bones</li>
+                        <li>Overdose or poisoning</li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="alert alert-danger mt-3 fs-5">
-            <strong>Remember:</strong> In case of life-threatening emergencies, call 911 immediately or go to the nearest emergency department.
-          </div>
-        </section>
+            <div class="col-md-6 emergency-column">
+                <div class="emergency-card">
+                    <h3>Urgent Care Centers</h3>
+                    <p class="emergency-subtitle">For non-life-threatening conditions like:</p>
+                    <ul>
+                        <li>Sprains and strains</li>
+                        <li>Minor cuts requiring stitches</li>
+                        <li>Ear infections</li>
+                        <li>Urinary tract infections</li>
+                        <li>Minor fractures</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="emergency-alert">
+                    <strong>Remember:</strong> In case of life-threatening emergencies, call 911 immediately or go to the nearest emergency department.
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Back to Top -->
         <div class="text-center mt-4">
