--- a/html_files/community.html
+++ b/html_files/community.html
@@ -56,9 +56,9 @@
         <!-- Page Header -->
         <section class="welcome-banner-with-image text-center mb-4">
           <div class="welcome-overlay">
-            <h1>📅 Community Events Hub</h1>
-            <p class="lead">Stay active, stay social — join these events to connect and have fun!</p>
-            <button class="btn btn-outline-light btn-lg mt-3 read-btn" onclick="readAloud('Community Events Hub. Stay active, stay social — join these events to connect and have fun!')">
+            <h1>📅Upcoming Community Events</h1>
+            <p class="lead">Stay active, stay social - join these events to connect and have fun!</p>
+            <button class="btn btn-outline-light btn-lg mt-3 read-btn" onclick="readAloud('Upcoming Community Events. Stay active, stay social - join these events to connect and have fun!')">
               🔊 Read Aloud
             </button>
           </div>
@@ -68,6 +68,55 @@
         <section class="section-card">
           <h2>🎉 Upcoming Events</h2>
           
+          <!-- Digital Literacy Workshop -->
+          <div class="event-card">
+            <div class="row align-items-center">
+              <div class="col-md-8">
+                <div class="d-flex align-items-start">
+                  <div class="feature-icon">🎯</div>
+                  <div class="ms-3">
+                    <h4>Digital Literacy Workshop</h4>
+                    <p>📅 <strong>Every Tuesday • 2:00 PM</strong></p>
+                    <p>📍 Community Room • All residents welcome</p>
+                    <p>Learn how to use smartphones, tablets, and computers. Prizes and fun for everyone! No experience needed.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 text-center">
+                <a href="../Images/CommunityEvents/Poster_DigitalLiteracyWorkshop.jpg" target="_blank" class="event-poster-link">
+                  <img src="../Images//CommunityEvents/Poster_DigitalLiteracyWorkshop.jpg" 
+                       alt="Digital Literacy Workshop Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Book Club Meeting -->
+          <div class="event-card">
+            <div class="row align-items-center">
+              <div class="col-md-8">
+                <div class="d-flex align-items-start">
+                  <div class="feature-icon">📚</div>
+                  <div class="ms-3">
+                    <h4>Book Club Meeting</h4>
+                    <p>📅 <strong>Every Friday, 10:00 AM</strong></p>
+                    <p>📍 Library • Coffee and snacks provided</p>
+                    <p>This month: "The Kite Runner" - all readers welcome! Come share your thoughts and enjoy good company.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 text-center">
+                <a href="../Images/Poster_BookClubMeeting.jpg" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster_BookClubMeeting.jpg" 
+                       alt="Book Club Meeting Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Art Therapy Workshop -->
           <div class="event-card">
             <div class="row align-items-center">
               <div class="col-md-8">
@@ -77,16 +126,20 @@
                     <h4>Art Therapy Workshop</h4>
                     <p>📅 <strong>October 20, 2025 • 2:00 PM</strong></p>
                     <p>📍 Wellness Room • All materials provided</p>
-                    <p>Unleash your creativity and relax through painting and sketching.</p>
+                    <p>Unleash your creativity and relax through painting and sketching. No artistic experience required!</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/Poster_ArtTherapy.jpg" alt="Art Therapy Poster" class="event-poster img-fluid rounded">
+                <a href="../Images/CommunityEvents/Poster - Unleash Your Creativity.png" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster - Unleash Your Creativity.png" alt="Art Therapy Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
               </div>
             </div>
           </div>
 
+          <!-- Music & Memory Session -->
           <div class="event-card">
             <div class="row align-items-center">
               <div class="col-md-8">
@@ -96,16 +149,20 @@
                     <h4>Music & Memory Session</h4>
                     <p>📅 <strong>October 25, 2025 • 11:00 AM</strong></p>
                     <p>📍 Activity Hall • Bring your favorite song!</p>
-                    <p>Music heals — come sing, reminisce, and share tunes that shaped your life.</p>
+                    <p>Music heals — come sing, reminisce, and share tunes that shaped your life. Instruments welcome!</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/Poster_MusicMemory.jpg" alt="Music & Memory Poster" class="event-poster img-fluid rounded">
+                <a href="../Images/CommunityEvents/Poster - Music & Memory Session.png" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster - Music & Memory Session.png" alt="Music & Memory Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
               </div>
             </div>
           </div>
 
+          <!-- Community Garden Day -->
           <div class="event-card">
             <div class="row align-items-center">
               <div class="col-md-8">
@@ -115,16 +172,20 @@
                     <h4>Community Garden Day</h4>
                     <p>📅 <strong>October 30, 2025 • 10:00 AM</strong></p>
                     <p>📍 Garden Area • Refreshments served</p>
-                    <p>Help us plant herbs and flowers for the upcoming season. All green thumbs welcome!</p>
+                    <p>Help us plant herbs and flowers for the upcoming season. All green thumbs welcome! Tools provided.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/Poster_GardenDay.jpg" alt="Community Garden Poster" class="event-poster img-fluid rounded">
+                <a href="../Images/CommunityEvents/Poster - Community Garden Day.png" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster - Community Garden Day.png" alt="Community Garden Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
               </div>
             </div>
           </div>
 
+          <!-- Monthly Birthday Celebration -->
           <div class="event-card">
             <div class="row align-items-center">
               <div class="col-md-8">
@@ -134,16 +195,20 @@
                     <h4>Monthly Birthday Celebration</h4>
                     <p>📅 <strong>November 2, 2025 • 3:00 PM</strong></p>
                     <p>📍 Dining Hall • Cake and Live Music</p>
-                    <p>Celebrate October and November birthdays together — everyone is invited!</p>
+                    <p>Celebrate October and November birthdays together — everyone is invited! Special performances planned.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/Poster_BirthdayParty.jpg" alt="Birthday Celebration Poster" class="event-poster img-fluid rounded">
+                <a href="../Images/CommunityEvents/Poster - Monthly Birthday Celebration.png" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster - Monthly Birthday Celebration.png" alt="Birthday Celebration Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
               </div>
             </div>
           </div>
 
+          <!-- Movie Night -->
           <div class="event-card">
             <div class="row align-items-center">
               <div class="col-md-8">
@@ -153,12 +218,15 @@
                     <h4>Movie Night: "The Best Exotic Marigold Hotel"</h4>
                     <p>📅 <strong>November 10, 2025 • 6:30 PM</strong></p>
                     <p>📍 Common Lounge • Popcorn provided</p>
-                    <p>Join us for laughter, friendship, and a cozy night at the movies!</p>
+                    <p>Join us for laughter, friendship, and a cozy night at the movies! Stay for discussion after the film.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/Poster_MovieNight.jpg" alt="Movie Night Poster" class="event-poster img-fluid rounded">
+                <a href="../Images/CommunityEvents/Poster - November 10, 2025.png" target="_blank" class="event-poster-link">
+                  <img src="../Images/CommunityEvents/Poster - November 10, 2025.png" alt="Movie Night Poster" class="event-poster img-fluid rounded">
+                  <small class="text-muted d-block mt-1">Click to view full poster</small>
+                </a>
               </div>
             </div>
           </div>
