Refactor exercise.html for improved video display
Updated video section with new layout and styling.

--- a/html_files/exercise.html
+++ b/html_files/exercise.html
@@ -70,15 +70,19 @@
           <div class="row">
             <!-- Video 1 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/G8BsLlPE1m4" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/G8BsLlPE1m4/maxresdefault.jpg" alt="Chair Yoga" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/G8BsLlPE1m4" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="https://img.youtube.com/vi/G8BsLlPE1m4/maxresdefault.jpg" 
+                         alt="Gentle Chair Yoga for Seniors" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Gentle Chair Yoga</h5>
-                    <p>15 min • Seated • Improves flexibility</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Gentle Chair Yoga</h5>
+                    <p class="mb-2">15 minutes • Beginner Friendly • Seated Exercises</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
@@ -86,15 +90,19 @@
 
             <!-- Video 2 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/t2SCv3fhxYs" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/t2SCv3fhxYs/maxresdefault.jpg" alt="Balance Training" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/t2SCv3fhxYs" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="https://img.youtube.com/vi/t2SCv3fhxYs/maxresdefault.jpg" 
+                         alt="Balance Exercises for Seniors" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Balance & Strength</h5>
-                    <p>10 min • All levels • Boosts stability</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Balance & Strength</h5>
+                    <p class="mb-2">10 minutes • All Levels • Improve Stability</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
@@ -102,15 +110,19 @@
 
             <!-- Video 3 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/Z3NlHjrY1bE" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Z3NlHjrY1bE/maxresdefault.jpg" alt="Seated Stretch Routine" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/Z3NlHjrY1bE" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="https://img.youtube.com/vi/Z3NlHjrY1bE/maxresdefault.jpg" 
+                         alt="Seated Stretch Routine for Seniors" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Seated Stretch Routine</h5>
-                    <p>12 min • No Equipment • Improve posture</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Seated Stretch Routine</h5>
+                    <p class="mb-2">12 minutes • No Equipment • Improve Posture</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
@@ -118,15 +130,19 @@
 
             <!-- Video 4 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/YJz7IwmSKQM" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/YJz7IwmSKQM/maxresdefault.jpg" alt="Morning Mobility" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/YJz7IwmSKQM" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="https://img.youtube.com/vi/YJz7IwmSKQM/maxresdefault.jpg" 
+                         alt="Morning Mobility Exercises" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Morning Mobility Routine</h5>
-                    <p>10 min • Standing/Seated • Start your day right</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Morning Mobility Routine</h5>
+                    <p class="mb-2">10 minutes • Standing/Seated • Start Your Day Right</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
@@ -134,15 +150,19 @@
 
             <!-- Video 5 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/fq3HkQnN5lM" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/fq3HkQnN5lM/maxresdefault.jpg" alt="Strength for Seniors" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/fq3HkQnN5lM" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="https://img.youtube.com/vi/fq3HkQnN5lM/maxresdefault.jpg" 
+                         alt="Strength Training for Seniors" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Strength for Seniors</h5>
-                    <p>20 min • Light Weights • Build endurance safely</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Strength for Seniors</h5>
+                    <p class="mb-2">20 minutes • Light Weights • Build Endurance Safely</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
@@ -150,15 +170,19 @@
 
             <!-- Video 6 -->
             <div class="col-md-6 mb-4">
-              <a href="https://youtu.be/example6" target="_blank" class="video-card-link">
-                <div class="video-card h-100">
-                  <div class="video-thumbnail">
-                    <img src="../Images/exercise_placeholder.jpg" alt="Breathing Exercises" class="img-fluid">
-                    <div class="play-overlay">▶</div>
+              <a href="https://youtu.be/example6" target="_blank" class="video-card-link text-decoration-none">
+                <div class="video-card h-100 border rounded">
+                  <div class="video-thumbnail position-relative">
+                    <img src="../Images/exercise_placeholder.jpg" 
+                         alt="Relaxation and Breathing Exercises" class="img-fluid rounded-top w-100">
+                    <div class="play-button-overlay">
+                      <div class="play-icon">▶</div>
+                    </div>
                   </div>
-                  <div class="video-content">
-                    <h5>Relaxation & Breathing</h5>
-                    <p>8 min • Seated • Reduce stress and anxiety</p>
+                  <div class="video-content p-3">
+                    <h5 class="mt-0">Relaxation & Breathing</h5>
+                    <p class="mb-2">8 minutes • Seated • Reduce Stress and Anxiety</p>
+                    <div class="btn btn-primary">Watch Now</div>
                   </div>
                 </div>
               </a>
