--- a/SeniorPage.html
+++ b/SeniorPage.html
@@ -68,7 +68,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container">
     <a class="navbar-brand" href="#">SilverCare Portal</a>
-    <div class="ms-auto">
+    <div class="ms-auto d-flex align-items-center">
+      <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+        Change Password
+      </button>
       <button class="btn btn-outline-danger" onclick="confirmLogout()">Log Out</button>
     </div>
   </div>
@@ -217,6 +220,37 @@
   </div>
 </footer>
 
+<!-- Change Password Modal -->
+<div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="changePasswordForm" novalidate>
+          <div class="mb-3">
+            <label for="oldPassword" class="form-label">Old Password</label>
+            <input type="password" id="oldPassword" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="newPassword" class="form-label">New Password</label>
+            <input type="password" id="newPassword" class="form-control" required minlength="6">
+          </div>
+          <div class="mb-3">
+            <label for="confirmPassword" class="form-label">Confirm New Password</label>
+            <input type="password" id="confirmPassword" class="form-control" required>
+          </div>
+          <div class="text-end">
+            <button type="button" class="btn btn-primary" onclick="changePassword()">Update Password</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   // Read Aloud
@@ -259,13 +293,11 @@
     const name = document.getElementById('contactName').value.trim();
     const phone = document.getElementById('contactPhone').value.trim();
 
-    // JS validation for phone
     if (!/^\d{10}$/.test(phone)) {
       alert("Please enter a valid 10-digit phone number.");
       return;
     }
 
-    // Add contact to list
     const li = document.createElement('li');
     li.className = 'list-group-item d-flex justify-content-between align-items-center';
     li.innerHTML = `<span><strong>${name}</strong> - ${phone}</span>
@@ -273,7 +305,6 @@
     li.querySelector('button').addEventListener('click', function() { li.remove(); });
     document.getElementById('contactList').appendChild(li);
 
-    // Reset form
     e.target.reset();
     e.target.classList.remove('was-validated');
   });
@@ -307,6 +338,32 @@
   }
 
   let selectedNurse = null;
+
+  // Change Password Logic
+  function changePassword() {
+    const oldPass = document.getElementById('oldPassword').value.trim();
+    const newPass = document.getElementById('newPassword').value.trim();
+    const confirmPass = document.getElementById('confirmPassword').value.trim();
+
+    if (!oldPass || !newPass || !confirmPass) {
+      alert("Please fill out all fields.");
+      return;
+    }
+    if (newPass.length < 6) {
+      alert("New password must be at least 6 characters long.");
+      return;
+    }
+    if (newPass !== confirmPass) {
+      alert("New passwords do not match.");
+      return;
+    }
+
+    // TODO: Connect to backend
+    alert("Password changed successfully!");
+    document.getElementById('changePasswordForm').reset();
+    const modal = bootstrap.Modal.getInstance(document.getElementById('changePasswordModal'));
+    modal.hide();
+  }
 </script>
 </body>
 </html>
