--- a/html_files/CreatePatientForm.html
+++ b/html_files/CreatePatientForm.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Create Patient</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 30px; }
-        form { max-width: 400px; }
-        label { display: block; margin-top: 10px; }
-        input { width: 100%; padding: 6px; margin-top: 4px; }
-        input[type="submit"] { margin-top: 20px; cursor: pointer; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Create Patient</title>
+  <link rel="stylesheet" href="../css_files/CreatePatientForm.css">
 </head>
 <body>
+  <div class="form-container">
     <h2>Create Patient Account</h2>
     <form method="POST">
-        <label>First Name:
-            <input type="text" name="first_name" required>
-        </label>
+      <div class="form-group">
+        <label>First Name:</label>
+        <input type="text" name="first_name" required>
+      </div>
 
-        <label>Last Name:
-            <input type="text" name="last_name" required>
-        </label>
+      <div class="form-group">
+        <label>Last Name:</label>
+        <input type="text" name="last_name" required>
+      </div>
 
-        <label>Email:
-            <input type="email" name="email" required>
-        </label>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" name="email" required>
+      </div>
 
-        <label>Phone Number:
-            <input type="text" name="phone">
-        </label>
+      <div class="form-group">
+        <label>Phone Number:</label>
+        <input type="text" name="phone">
+      </div>
 
-        <label>Date of Birth:
-            <input type="date" name="dob">
-        </label>
+      <div class="form-group">
+        <label>Date of Birth:</label>
+        <input type="date" name="dob">
+      </div>
 
-        <label>Personal Health Number(PHN):
-            <input type="text" name="phn">
-        </label>
+      <div class="form-group">
+        <label>Personal Health Number (PHN):</label>
+        <input type="text" name="phn">
+      </div>
 
-        <label>Emergency Contact:
-            <input type="text" name="emergency_contact">
-        </label>
+      <div class="form-group">
+        <label>Emergency Contact:</label>
+        <input type="text" name="emergency_contact">
+      </div>
 
-        <input type="submit" value="Create Patient">
+      <input type="submit" value="Create Patient" class="submit-btn">
     </form>
+  </div>
 </body>
 </html>
